@@ -35,7 +35,7 @@ hwloc_gl_discover(struct hwloc_backend *backend, struct hwloc_disc_status *dstat
   unsigned i;
   int err;
 
-  assert(dstatus->phase == HWLOC_DISC_PHASE_MISC);
+  assert(dstatus->phase == HWLOC_DISC_PHASE_IO);
 
   hwloc_topology_get_type_filter(topology, HWLOC_OBJ_OS_DEVICE, &filter);
   if (filter == HWLOC_TYPE_FILTER_KEEP_NONE)
@@ -161,7 +161,7 @@ hwloc_gl_component_instantiate(struct hwloc_topology *topology,
 
 static struct hwloc_disc_component hwloc_gl_disc_component = {
   "gl",
-  HWLOC_DISC_PHASE_MISC,
+  HWLOC_DISC_PHASE_IO,
   HWLOC_DISC_PHASE_GLOBAL,
   hwloc_gl_component_instantiate,
   10, /* after pci */
